--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 This is my personal research on yajl library for json parser in c or c++
-where you can pass paramer as string 
+where you can pass parameter as string 
